--- a/src/Operation/index.less
+++ b/src/Operation/index.less
@@ -3,12 +3,15 @@
 .@{prefix}-operation {
   display: flex;
   align-items: center;
-  justify-content: center;
+  // justify-content: center;
   .@{prefix}-popconfirm-target {
     &:not(.@{prefix}-operation-item) {
       // margin-left: -12px;
       // padding: 0 12px;
     }
+  }
+
+  &-poop {
   }
 
   & > &-item {
