--- a/src/Popover/index.less
+++ b/src/Popover/index.less
@@ -17,11 +17,11 @@
   &:after {
     position: absolute;
     left: 50%;
-    margin-left: -5px;
     content: '';
     border-left: 5px solid transparent;
     border-right: 5px solid transparent;
     border-top: 5px solid #fff;
+    transform: translate(-50%, 0);
   }
 
   &-mask {
@@ -60,8 +60,9 @@
   &-top-left {
     &.@{prefix}-popover {
       &:after {
-        left: auto;
-        right: 16px;
+        right: auto;
+        left: 16px;
+        transform: translate(0, 0);
         filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.2));
       }
     }
@@ -70,8 +71,9 @@
   &-top-right {
     &.@{prefix}-popover {
       &:after {
-        right: auto;
-        left: 20px;
+        left: auto;
+        right: 16px;
+        transform: translate(0, 0);
         filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.2));
       }
     }
@@ -133,6 +135,8 @@
         border-bottom: 5px solid #fff;
         border-left: 5px solid transparent;
         border-top: 5px solid transparent;
+        transform: translate(0, 0);
+
         filter: drop-shadow(2px -2px 2px rgba(0, 0, 0, 0.2));
       }
     }
@@ -142,13 +146,15 @@
     &.@{prefix}-popover {
       &:after {
         right: auto;
-        left: 20px;
+        left: 16px;
         top: -5px;
         margin-top: -5px;
         border-right: 5px solid transparent;
         border-bottom: 5px solid #fff;
         border-left: 5px solid transparent;
         border-top: 5px solid transparent;
+        transform: translate(0, 0);
+
         filter: drop-shadow(2px -2px 2px rgba(0, 0, 0, 0.2));
       }
     }
