--- a/src/Operation/index.less
+++ b/src/Operation/index.less
@@ -67,10 +67,10 @@
         color: @disableColor;
         cursor: no-drop;
       }
-      &-active {
+      &-select {
         background: #d9e3fa;
       }
-      &:not(.@{prefix}-operation-item-disabled):not(.@{prefix}-operation-item-active):hover {
+      &:not(.@{prefix}-operation-item-disabled):not(.@{prefix}-operation-item-select):hover {
         height: 32px;
         background: #f2f6fa;
       }
