--- a/src/Select/index.less
+++ b/src/Select/index.less
@@ -86,6 +86,10 @@
   max-height: 500px;
   overflow-y: auto;
 
+  &-popup {
+    z-index: 9999;
+  }
+
   &-item {
     height: 34px;
     cursor: pointer;
