--- a/src/Button/index.less
+++ b/src/Button/index.less
@@ -14,7 +14,7 @@
   display: flex;
   align-items: center;
 
-  .@{prefix}-iconfont {
+  .@{prefix}-icon {
     margin-right: 5px;
     margin-left: -3px;
     color: inherit;
