优化icon组件样式问题，优化icon组件尺寸问题，完善upload组件功能

--- a/src/Button/index.less
+++ b/src/Button/index.less
@@ -17,7 +17,6 @@
   .@{prefix}-icon {
     margin-right: 5px;
     margin-left: -3px;
-    color: inherit;
   }
   span {
     line-height: 16px;
@@ -30,6 +29,7 @@
     &:hover {
       border-color: #7692ff;
       color: #7692ff;
+      fill: #7692ff;
     }
   }
 
@@ -40,6 +40,7 @@
     &:hover {
       color: #fff;
       background: #7692ff;
+      fill: #fff;
     }
   }
 
@@ -50,6 +51,7 @@
     &:hover {
       border-color: #7692ff;
       color: #7692ff;
+      fill: #7692ff;
     }
   }
   &&-text {
@@ -58,6 +60,7 @@
     &:hover {
       border-color: #7692ff;
       color: #7692ff;
+      fill: #7692ff;
     }
   }
   &&-link {
@@ -67,6 +70,7 @@
     &:hover {
       border-color: #7692ff;
       color: #7692ff;
+      fill: #7692ff;
     }
   }
 
@@ -74,6 +78,7 @@
     cursor: not-allowed;
     background: @fullDisableColor;
     color: #d0d1da;
+    fill: #d0d1da;
   }
   &&-lg {
     padding: 10px 16px;
