--- a/src/Image/index.less
+++ b/src/Image/index.less
@@ -4,7 +4,8 @@
   display: inline-block;
   overflow: hidden;
   position: relative;
-
+  width: 100%;
+  height: 100%;
   &[hidden] {
     display: none;
   }
