--- a/src/index.less
+++ b/src/index.less
@@ -1,9 +1,7 @@
 // class 的前缀
 @prefix: rootnet-design;
 
-/*
-    主题颜色 
-*/
+// 主题颜色
 // 主色
 @primaryColor: #5477ff;
 // 主色-Hover状态
@@ -11,9 +9,7 @@
 // 主色-Active状态
 @primaryColorActive: #2d53e8;
 
-/*
-    功能颜色 
-*/
+// 功能颜色
 // 成功
 @successColor: #33cc8a;
 // 提醒
@@ -25,9 +21,7 @@
 // 禁用
 @disableColor: #d0d1d9;
 
-/*
-    填充颜色 
-*/
+// 填充颜色
 // 图标填充色
 @fullDarkColor: #3a415c;
 // 边框颜色
@@ -39,9 +33,7 @@
 // 禁用填充色
 @fullDisableColor: #ededef;
 
-/*
-    文字颜色 
-*/
+// 文字颜色
 // 标题正文主色
 @textColor: #15171f;
 // 次要文字
@@ -55,9 +47,7 @@
 // 链接文字
 @linkTextColor: @primaryColor;
 
-/*
-    背景颜色 
-*/
+// 背景颜色
 // 导航栏背景色
 @navbarBackgroundColor: #15171f;
 // 整体页面背景色
@@ -73,17 +63,13 @@
 // 文字按钮-Hover状态
 @textButtonBackgroundColor: #ebeff5;
 
-/*
-    业务颜色 
-*/
+// 业务颜色
 // 上涨
 @baseUpColor: #f5221a;
 // 下跌
 @baseDownColor: #33cc8a;
 
-/*
-    描边颜色 
-*/
+// 描边颜色
 // 默认
 @borderDefaultColor: @borderColor;
 // 虚线
@@ -99,9 +85,7 @@
 // 错误
 @borderErrorColor: @errorColor;
 
-/*
-    阴影颜色 
-*/
+// 阴影颜色
 // 默认
 @shadowdefault: 0px 4px 16px 0px rgba(188, 182, 204, 0.2);
 // 默认 hover
@@ -116,51 +100,3 @@
 
 @maskZIndex: 998;
 @modalZIndex: 999;
-
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
-}
-
-body,
-div,
-dl,
-dt,
-dd,
-ul,
-ol,
-li,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-pre,
-code,
-form,
-fieldset,
-legend,
-input,
-textarea,
-p,
-blockquote,
-th,
-td,
-hr,
-button,
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  margin: 0;
-  padding: 0;
-}
