--- a/src/Select/index.less
+++ b/src/Select/index.less
@@ -132,11 +132,13 @@
     width: 100%;
 
     .@{prefix}-tree-row {
-      width: 100%;
-      padding: 0 0px;
+      padding: 0 8px;
 
+      .@{prefix}-tree-collapsed {
+        margin-right: 0;
+      }
       .@{prefix}-tree-checkbox {
-        margin-left: 12px;
+        margin-left: 0px;
 
         & + .@{prefix}-tree-title {
           padding-left: 0;
@@ -145,7 +147,7 @@
       }
 
       .@{prefix}-tree-title {
-        padding: 0 12px;
+        padding: 0 8px 0 4px;
       }
 
       &:hover {
