修改颜色主题变量

--- a/src/Alert/index.less
+++ b/src/Alert/index.less
@@ -71,14 +71,14 @@
   &-title {
     font-size: 16px;
     font-weight: 500;
-    color: #15171f;
+    color: @textColor;
     line-height: 1em;
     margin-bottom: 16px;
   }
 
   &-content {
     font-size: 14px;
-    color: #15171f;
+    color: @textColor;
     line-height: 16px;
     height: 16px;
     white-space: nowrap;
@@ -87,7 +87,7 @@
   }
   &-footer {
     font-size: 14px;
-    color: #15171f;
+    color: @textColor;
     line-height: 16px;
     height: 16px;
   }
