--- a/src/Breadcrumb/index.less
+++ b/src/Breadcrumb/index.less
@@ -8,14 +8,14 @@
     cursor: pointer;
     &:after {
       content: '/';
-      color: #7a8199;
+      color: @auxiliaryTextColor;
       font-size: 14px;
       font-weight: 400;
       line-height: 14px;
       margin: 0 8px;
     }
     span {
-      color: #7a8199;
+      color: @auxiliaryTextColor;
       font-size: 14px;
       font-weight: 400;
       line-height: 14px;
@@ -24,7 +24,7 @@
     &:last-child {
       cursor: text;
       span {
-        color: #15171f;
+        color: @textColor;
       }
       &::after {
         display: none;
