--- a/src/Form/index.less
+++ b/src/Form/index.less
@@ -54,7 +54,7 @@
 
     &-laber {
       font-size: 14px;
-      color: #7a8199;
+      color: @auxiliaryTextColor;
       line-height: 32px;
 
       &-none {
@@ -65,7 +65,7 @@
     }
 
     &-required {
-      color: #f5221b;
+      color: @errorColor;
     }
 
     &-control {
@@ -108,7 +108,7 @@
 
     &-error {
       font-size: 14px;
-      color: #f5221b;
+      color: @errorColor;
       line-height: 24px;
     }
   }
