--- a/src/PageHeader/index.less
+++ b/src/PageHeader/index.less
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: #f9fafe;
+  background: @mainackgroundColor;
   &-left {
     display: flex;
     align-items: center;
@@ -17,7 +17,7 @@
 
     span {
       font-size: 14px;
-      color: #15171f;
+      color: @textColor;
       line-height: 18px;
     }
   }
