--- a/src/Progress/index.less
+++ b/src/Progress/index.less
@@ -43,7 +43,7 @@
 
   &-success {
     .@{prefix}-progress-outer {
-      background: #f0f2f5;
+      background: @tableHeadBackgroundColor;
     }
 
     .@{prefix}-progress-inner {
@@ -56,7 +56,7 @@
   }
   &-error {
     .@{prefix}-progress-outer {
-      background: #f0f2f5;
+      background: @tableHeadBackgroundColor;
     }
 
     .@{prefix}-progress-inner {
@@ -70,7 +70,7 @@
 
   &-primary {
     .@{prefix}-progress-outer {
-      background: #f0f2f5;
+      background: @tableHeadBackgroundColor;
     }
 
     .@{prefix}-progress-inner {
@@ -98,7 +98,7 @@
   &-text {
     width: 2em;
     font-size: 14px;
-    color: #7a8199;
+    color: @auxiliaryTextColor;
     line-height: 14px;
   }
 }
