--- a/src/Result/index.less
+++ b/src/Result/index.less
@@ -22,7 +22,7 @@
       margin-top: 57px;
       font-size: 46px;
       font-weight: 500;
-      color: #15171f;
+      color: @textColor;
       line-height: 65px;
       margin-bottom: 11px;
     }
@@ -30,7 +30,7 @@
       font-size: 24px;
       font-family: PingFangSC-Regular, PingFang SC;
       font-weight: 400;
-      color: #15171f;
+      color: @textColor;
       line-height: 33px;
       margin-bottom: 62px;
     }
