--- a/src/Tree/index.less
+++ b/src/Tree/index.less
@@ -21,7 +21,7 @@
 
     &-checked {
       .@{prefix}-tree-title {
-        background: #d9e3fa;
+        background: @tableItemSelectBackgroundColor;
       }
     }
 
