--- a/src/Card/index.less
+++ b/src/Card/index.less
@@ -2,7 +2,7 @@
 
 .@{prefix}-card {
   background: #ffffff;
-  box-shadow: 0px 4px 16px 0px rgba(188, 182, 204, 0.2);
+  box-shadow: @shadowdefault;
   border-radius: 6px;
   display: flex;
   flex-direction: column;
@@ -21,7 +21,7 @@
   &-title {
     font-size: 14px;
     font-weight: 500;
-    color: #15171f;
+    color: @textColor;
     line-height: 14px;
     margin-left: 16px;
     margin-right: 16px;
@@ -30,7 +30,7 @@
       display: inline-block;
       width: 2px;
       height: 14px;
-      background: #5477ff;
+      background: @primaryColor;
       border-radius: 2px;
       vertical-align: middle;
       margin-right: 8px;
@@ -47,11 +47,11 @@
       height: 40px;
       margin: 0 12px;
       font-size: 14px;
-      color: #15171f;
+      color: @textColor;
       line-height: 40px;
       &-disabled {
         cursor: not-allowed;
-        color: #d0d1d9;
+        color: @disableColor;
       }
       &&-active {
         position: relative;
@@ -62,7 +62,7 @@
           left: 0;
           right: 0;
           height: 2px;
-          background: #5477ff;
+          background: @primaryColor;
           border-radius: 2px;
         }
       }
