--- a/src/Empty/index.less
+++ b/src/Empty/index.less
@@ -18,7 +18,7 @@
     text-align: center;
     font-size: 16px;
     font-weight: 500;
-    color: #d0d1d9;
+    color: @disableColor;
     line-height: 22px;
   }
 }
