--- a/src/Modal/index.less
+++ b/src/Modal/index.less
@@ -58,12 +58,12 @@
     align-items: center;
     justify-content: space-between;
     padding: 0 16px;
-    border-bottom: 1px solid #e9eaf2;
+    border-bottom: 1px solid @dividerColor;
 
     &-title {
       font-size: 16px;
       font-weight: 500;
-      color: #15171f;
+      color: @textColor;
       line-height: 24px;
       flex: 1;
     }
@@ -73,7 +73,7 @@
       position: absolute;
       right: 16px;
       top: 16px;
-      color: #3a415c;
+      color: @fullDarkColor;
     }
   }
 
@@ -87,7 +87,7 @@
     align-items: center;
     justify-content: flex-end;
     padding: 0 16px;
-    border-top: 1px solid #e9eaf2;
+    border-top: 1px solid @dividerColor;
 
     & > * {
       margin-left: 16px;
