--- a/src/Popover/index.less
+++ b/src/Popover/index.less
@@ -11,7 +11,7 @@
   position: relative;
   z-index: 10;
   background: #ffffff;
-  box-shadow: 0px 6px 20px 0px rgba(153, 161, 194, 0.3);
+  box-shadow: @shadowdefaultHover;
   border-radius: 2px;
 
   &:after {
