--- a/src/Tabs/index.less
+++ b/src/Tabs/index.less
@@ -40,7 +40,7 @@
             top: 0;
             right: 0;
             height: 40px;
-            background: #5477ff;
+            background: @primaryColor;
             border-radius: 2px;
             width: 2px;
           }
@@ -63,7 +63,7 @@
   &-title {
     font-size: 14px;
     font-weight: 500;
-    color: #15171f;
+    color: @textColor;
     line-height: 14px;
     margin-left: 16px;
     margin-right: 16px;
@@ -72,7 +72,7 @@
       display: inline-block;
       width: 2px;
       height: 14px;
-      background: #5477ff;
+      background: @primaryColor;
       border-radius: 2px;
       vertical-align: middle;
       margin-right: 8px;
@@ -89,14 +89,14 @@
       height: 40px;
       margin: 0 12px;
       font-size: 14px;
-      color: #15171f;
+      color: @textColor;
       line-height: 40px;
       display: flex;
       align-items: center;
       justify-content: center;
       &-disabled {
         cursor: not-allowed;
-        color: #d0d1d9;
+        color: @disableColor;
       }
       &-active {
         position: relative;
@@ -107,7 +107,7 @@
           left: 0;
           right: 0;
           height: 2px;
-          background: #5477ff;
+          background: @primaryColor;
           border-radius: 2px;
         }
       }
