--- a/src/Tooltip/index.less
+++ b/src/Tooltip/index.less
@@ -13,7 +13,7 @@
   position: relative;
   border-radius: 4px;
   background: rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 3px 10px 0px rgba(117, 125, 150, 0.2);
+  box-shadow: @shadowdefault;
   display: none;
   z-index: @modalZIndex;
 
