--- a/src/UacTransfer/index.less
+++ b/src/UacTransfer/index.less
@@ -5,7 +5,7 @@
   height: 332px;
   &-title {
     font-size: 14px;
-    color: #15171f;
+    color: @textColor;
     line-height: 1em;
     height: 40px;
     line-height: 40px;
@@ -26,7 +26,7 @@
   &-container {
     background: #ffffff;
     border-radius: 4px;
-    border: 1px solid #cfd3e3;
+    border: 1px solid @borderColor;
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -70,14 +70,14 @@
       justify-content: center;
       border-radius: 2px;
 
-      background: #5477ff;
+      background: @primaryColor;
       color: #fff;
 
       &-disabled {
         cursor: not-allowed;
         background: #ffffff;
         border-radius: 2px;
-        border: 1px solid #cfd3e3;
+        border: 1px solid @borderColor;
       }
     }
   }
@@ -100,19 +100,19 @@
     .num {
       white-space: nowrap;
       font-size: 14px;
-      color: #7a8199;
+      color: @auxiliaryTextColor;
       margin-left: 6px;
     }
   }
 
   &-invertSelection {
     font-size: 14px;
-    color: #5477ff;
+    color: @primaryColor;
     cursor: pointer;
   }
   &-noData {
     .@{prefix}-transfer-invertSelection {
-      color: #d0d1d9;
+      color: @disableColor;
       cursor: not-allowed;
     }
   }
