拖拽上传或listType类型为picture-card自定义显示文字

--- a/src/Upload/index.less
+++ b/src/Upload/index.less
@@ -61,7 +61,7 @@
         right: 15px;
       }
       .@{prefix}-upload-item {
-        width: 104px;
+        min-width: 104px;
         height: 104px;
         background: @tableHeadBackgroundColor;
         border-radius: 2px;
