--- a/src/Pagination/index.less
+++ b/src/Pagination/index.less
@@ -1,4 +1,143 @@
 @import '../index.less';
 
-.@{prefix}-t {
+.@{prefix}-pagination {
+  height: 32px;
+  display: flex;
+  align-items: center;
+
+  li {
+    height: 100%;
+    list-style: none;
+
+    button,
+    input,
+    select {
+      height: 100%;
+      padding: 0;
+      margin: 0;
+      outline: none;
+      background-color: #fff;
+      text-align: center;
+    }
+  }
+
+  @fontColor: #15171f;
+  @activeColor: #5477ff;
+
+  .c-pagination-item {
+    color: @fontColor;
+    padding: 0 12px;
+    margin: 0 5px;
+    border-radius: 3px;
+    font-size: 12px;
+    cursor: pointer;
+    border: 1px solid #e8e7e7;
+    transition: all 0.1s linear;
+  }
+
+  .c-pagination-item:hover {
+    border: 1px solid @activeColor;
+  }
+
+  .c-pagination-active {
+    color: #fff;
+    background-color: @activeColor;
+    border: 1px solid @activeColor;
+  }
+
+  .c-pagination-prev,
+  .c-pagination-next {
+    outline: none;
+    background-color: transparent;
+  }
+
+  // 禁用
+  .c-pagination-prev:disabled,
+  .c-pagination-next:disabled {
+    cursor: not-allowed;
+  }
+
+  .c-pagination-item:disabled {
+    cursor: not-allowed;
+    border: 1px solid #e8e7e7;
+  }
+
+  /* 省略号 */
+  .c-pagination-point-next,
+  .c-pagination-point-prev {
+    // position: relative;
+    width: 40px;
+    border: 1px solid transparent;
+  }
+
+  .c-pagination-right::after,
+  .c-pagination-left::after {
+    content: '···';
+  }
+
+  .c-pagination-point-next:hover::after {
+    content: '»';
+    font-size: 14px;
+    font-family: '黑体';
+    vertical-align: middle;
+    color: @activeColor;
+  }
+
+  .c-pagination-point-prev:hover::after {
+    content: '«';
+    font-size: 14px;
+    font-family: '黑体';
+    vertical-align: middle;
+    color: @activeColor;
+  }
+
+  .c-pagination-pageSize {
+    select {
+      outline: none;
+    }
+  }
+
+  .c-pagination-toPage {
+    margin: 0 10px;
+    font-size: 12px;
+
+    input {
+      width: 50px;
+      outline: none;
+    }
+  }
+
+  .c-pagination-totalNum {
+    height: 100%;
+    margin: 0 8px;
+    border-color: transparent;
+    line-height: 32px;
+    font-size: 14px;
+    color: @fontColor;
+  }
+}
+
+// 禁用
+.@{prefix}-pagination-disabled {
+  cursor: not-allowed;
+  li {
+    button,
+    input,
+    select {
+      background-color: #f5f5f5 !important;
+      color: #00000040 !important;
+    }
+  }
+  .c-pagination-active {
+    background-color: #d9d9d9 !important;
+  }
+}
+
+// 小尺寸
+.@{prefix}-pagination-small {
+  height: 24px;
+
+  .c-pagination-totalNum {
+    line-height: 24px;
+  }
 }
