修改Message组件z-index为1098

--- a/src/Message/index.less
+++ b/src/Message/index.less
@@ -5,7 +5,7 @@
   width: 100%;
   top: 10px;
   left: 0;
-  z-index: 888;
+  z-index: @messageZIndex;
   text-align: center;
   pointer-events: none;
 
