--- a/src/Transfer/index.less
+++ b/src/Transfer/index.less
@@ -54,6 +54,9 @@
   }
 
   &-checkbox {
+    flex: 1;
+    overflow-y: auto;
+
     .@{prefix}-checkbox-group {
       display: flex;
       flex-direction: column;
@@ -66,6 +69,8 @@
 
   &-left {
     flex: 1;
+    display: flex;
+    flex-direction: column;
   }
 
   &-operation {
@@ -99,6 +104,8 @@
 
   &-right {
     flex: 1;
+    display: flex;
+    flex-direction: column;
   }
 
   &-allCheckbox {
