--- a/src/UacTransfer/index.less
+++ b/src/UacTransfer/index.less
@@ -2,7 +2,7 @@
 
 .@{prefix}-transfer {
   display: flex;
-  height: 332px;
+  // height: 332px;
   &-title {
     font-size: 14px;
     color: @textColor;
