--- a/src/Form/index.less
+++ b/src/Form/index.less
@@ -11,7 +11,9 @@
     .@{prefix}-form-item {
       margin-right: 16px;
       display: flex;
-
+      &-control {
+        flex: 1;
+      }
       &-laber {
         &:after {
           content: '：';
