--- a/src/Input/index.less
+++ b/src/Input/index.less
@@ -6,8 +6,36 @@
   border-radius: 4px;
   transition: border 0.3s;
 
-  &:hover {
+  &:hover:not(.@{prefix}-input-disabled) {
     border-color: @primaryColorHover;
+  }
+  &-disabled {
+    border-color: #cfd3e3;
+    background: #ededef;
+    cursor: no-drop !important;
+  }
+  &-disabled &-content {
+    input {
+      color: #d0d1d9;
+
+      cursor: no-drop !important;
+    }
+  }
+  &-disabled div.labe {
+    color: #d0d1d9;
+    fill: #d0d1d9;
+  }
+  &-disabled &-icon {
+    color: #d0d1d9;
+    fill: #d0d1d9;
+  }
+  &-disabled &-before {
+    color: #d0d1d9;
+    fill: #d0d1d9;
+  }
+  &-disabled &-after {
+    color: #d0d1d9;
+    fill: #d0d1d9;
   }
 
   &.horizontal {
