--- a/src/Message/index.less
+++ b/src/Message/index.less
@@ -11,6 +11,7 @@
 
   &-item {
     padding: 8px;
+    box-sizing: border-box;
   }
 
   &-content {
@@ -18,7 +19,7 @@
     padding: 10px 16px;
     text-align: center;
     background: #ffffff;
-    box-shadow: 0px 6px 20px 0px rgba(153, 161, 194, 0.3);
+    box-shadow: 0px 3px 20px 0px rgba(153, 161, 194, 0.3);
     border-radius: 2px;
     pointer-events: all;
   }
@@ -42,17 +43,34 @@
     }
     &-enter-active {
       opacity: 1;
-      transition: opacity 300ms, transform 300ms;
       transform: translateY(0%);
+      transition: all 0.5s;
     }
     &-exit {
       opacity: 1;
-      transform: translateY(0%);
     }
     &-exit-active {
-      opacity: 0;
-      transition: opacity 300ms, transform 300ms;
-      transform: translateY(-100%);
+      // transition: opacity 300ms, transform 300ms;
+      // transform: translateY(-100%);
+      // height: 0;
+      overflow: hidden;
+      animation-name: MessageMoveOut;
+      animation-duration: 0.5s;
     }
+  }
+}
+
+@keyframes MessageMoveOut {
+  0% {
+    opacity: 1;
+
+    padding: 8px;
+    max-height: 150px;
+  }
+
+  100% {
+    opacity: 0;
+    padding: 0;
+    max-height: 0;
   }
 }
