--- a/src/Pagination/index.less
+++ b/src/Pagination/index.less
@@ -11,7 +11,8 @@
 
     button,
     input,
-    select {
+    select,
+    .c-pagination-select {
       height: 100%;
       padding: 0;
       margin: 0;
@@ -81,6 +82,7 @@
     font-family: '黑体';
     vertical-align: middle;
     color: @activeColor;
+    line-height: 20px;
   }
 
   .c-pagination-point-prev:hover::after {
@@ -92,8 +94,9 @@
   }
 
   .c-pagination-pageSize {
-    select {
-      outline: none;
+    .@{prefix}-select-target {
+      text-align: left;
+      min-width: 100px;
     }
   }
 
@@ -120,16 +123,21 @@
 // 禁用
 .@{prefix}-pagination-disabled {
   cursor: not-allowed;
+
   li {
     button,
     input,
-    select {
+    select,
+    .c-pagination-select {
       background-color: #f5f5f5 !important;
       color: #00000040 !important;
     }
   }
-  .c-pagination-active {
+
+  .c-pagination-active,
+  .c-pagination-select {
     background-color: #d9d9d9 !important;
+    border: 1px solid #e8e7e7 !important;
   }
 }
 
@@ -137,7 +145,12 @@
 .@{prefix}-pagination-small {
   height: 24px;
 
-  .c-pagination-totalNum {
+  .c-pagination-totalNum,
+  .c-pagination-select {
     line-height: 24px;
+  }
+
+  .c-pagination-pageSize {
+    margin-top: 2px;
   }
 }
