--- a/src/Modal/index.less
+++ b/src/Modal/index.less
@@ -4,13 +4,10 @@
   position: fixed;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
   display: flex;
   align-items: center;
   justify-content: center;
   z-index: 999;
-  display: none;
 }
 
 .@{prefix}-modal {
@@ -22,14 +19,44 @@
   border-radius: 2px;
 
   &-confirm {
-    width: 384px;
+    .@{prefix}-modal {
+      width: 384px;
+
+      &-icon {
+        margin-right: 5px;
+      }
+    }
+
+    &-primary {
+      .@{prefix}-modal-icon {
+        fill: @primaryColor;
+      }
+    }
+
+    &-success {
+      .@{prefix}-modal-icon {
+        fill: @successColor;
+      }
+    }
+
+    &-warning {
+      .@{prefix}-modal-icon {
+        fill: @warningColor;
+      }
+    }
+
+    &-error {
+      .@{prefix}-modal-icon {
+        fill: @errorColor;
+      }
+    }
 
     .@{prefix}-modal-head {
       border: 0;
     }
 
     .@{prefix}-modal-body {
-      padding: 0 16px;
+      padding: 0 16px 0 37px;
       font-size: 14px;
     }
 
@@ -92,5 +119,64 @@
     & > * {
       margin-left: 16px;
     }
+  }
+
+  &-transition {
+    &-enter {
+      opacity: 0;
+      width: 0;
+      height: 0;
+
+      .@{prefix}-modal-mask {
+        opacity: 0;
+      }
+    }
+
+    &-enter-active {
+      width: 100%;
+      height: 100%;
+      opacity: 1;
+      transition: opacity 0.3s;
+
+      .@{prefix}-modal-mask {
+        opacity: 1;
+        transition: opacity 0.3s;
+      }
+    }
+
+    &-enter-done {
+      width: 100%;
+      height: 100%;
+      opacity: 1;
+    }
+
+    &-exit {
+      opacity: 1;
+      width: 100%;
+      height: 100%;
+
+      .@{prefix}-modal-mask {
+        opacity: 1;
+      }
+    }
+
+    &-exit-active {
+      // transition: opacity 300ms, transform 300ms;
+      // transform: translateY(-100%);
+      // height: 0;
+
+      animation-name: MessageMoveOut;
+      animation-duration: 0.3s;
+    }
+  }
+}
+
+@keyframes MessageMoveOut {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
   }
 }
