--- a/src/Select/index.less
+++ b/src/Select/index.less
@@ -4,7 +4,6 @@
 }
 
 .@{prefix}-select-target {
-  min-width: 150px;
   cursor: pointer;
   height: 32px;
   background: #ffffff;
@@ -148,6 +147,7 @@
 
       .@{prefix}-tree-title {
         padding: 0 8px 0 4px;
+        white-space: nowrap;
       }
 
       &:hover {
