--- a/src/Message/index.less
+++ b/src/Message/index.less
@@ -77,6 +77,7 @@
       overflow: hidden;
       animation-name: MessageMoveOut;
       animation-duration: 0.5s;
+      animation-fill-mode: both;
     }
   }
 }
