修改modal和message动画冲突的问题

--- a/src/Modal/index.less
+++ b/src/Modal/index.less
@@ -171,7 +171,7 @@
       // transform: translateY(-100%);
       // height: 0;
 
-      animation-name: MessageMoveOut;
+      animation-name: ModalMoveOut;
       animation-duration: 0.31s;
     }
     &-exit-done {
@@ -180,7 +180,7 @@
   }
 }
 
-@keyframes MessageMoveOut {
+@keyframes ModalMoveOut {
   0% {
     opacity: 1;
   }
