--- a/src/Message/index.less
+++ b/src/Message/index.less
@@ -71,13 +71,8 @@
       opacity: 1;
     }
     &-exit-active {
-      // transition: opacity 300ms, transform 300ms;
-      // transform: translateY(-100%);
-      // height: 0;
       overflow: hidden;
-      animation-name: MessageMoveOut;
-      animation-duration: 0.5s;
-      animation-fill-mode: both;
+      animation: MessageMoveOut 0.5s forwards;
     }
   }
 }
@@ -85,14 +80,15 @@
 @keyframes MessageMoveOut {
   0% {
     opacity: 1;
-
     padding: 8px;
-    max-height: 150px;
+    max-height: 100px;
+    transform: translateY(0%);
   }
 
   100% {
     opacity: 0;
     padding: 0;
     max-height: 0;
+    transform: translateY(0);
   }
 }
