--- a/src/Modal/index.less
+++ b/src/Modal/index.less
@@ -19,6 +19,7 @@
   background: #ffffff;
   box-shadow: 0px 6px 20px 0px rgba(153, 161, 194, 0.3);
   border-radius: 2px;
+  transition: all 0.2s;
 
   &-visible {
     display: block;
@@ -82,7 +83,7 @@
     right: 0;
     top: 0;
     bottom: 0;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.3);
   }
 
   &-head {
@@ -133,6 +134,9 @@
       width: 0;
       height: 0;
 
+      .@{prefix}-modal {
+        transform: scale(0);
+      }
       .@{prefix}-modal-mask {
         opacity: 0;
       }
@@ -142,11 +146,14 @@
       width: 100%;
       height: 100%;
       opacity: 1;
-      transition: opacity 0.3s;
+      transition: opacity 0.2s;
 
+      .@{prefix}-modal {
+        transform: scale(1);
+      }
       .@{prefix}-modal-mask {
         opacity: 1;
-        transition: opacity 0.3s;
+        transition: opacity 0.2s;
       }
     }
 
@@ -164,18 +171,23 @@
       .@{prefix}-modal-mask {
         opacity: 1;
       }
+      .@{prefix}-modal {
+        transform: scale(1);
+      }
     }
 
     &-exit-active {
-      // transition: opacity 300ms, transform 300ms;
-      // transform: translateY(-100%);
-      // height: 0;
-
-      animation-name: ModalMoveOut;
-      animation-duration: 0.31s;
+      animation: ModalMoveOut 0.2s forwards;
+      .@{prefix}-modal {
+        transform: scale(1);
+        animation: ModalContentMoveOut 0.2s forwards;
+      }
     }
     &-exit-done {
       display: none;
+      .@{prefix}-modal {
+        transform: scale(0);
+      }
     }
   }
 }
@@ -188,5 +200,15 @@
   100% {
     opacity: 0;
     display: none;
+  }
+}
+
+@keyframes ModalContentMoveOut {
+  0% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(0);
   }
 }
