Message增加x关闭按钮

--- a/src/Message/index.less
+++ b/src/Message/index.less
@@ -57,6 +57,12 @@
     margin-right: 9px;
   }
 
+  &-close {
+    cursor: pointer;
+    color: #3a415c;
+    margin-left: 64px;
+  }
+
   &-transition {
     &-enter {
       opacity: 0;
