--- a/src/Transfer/index.less
+++ b/src/Transfer/index.less
@@ -71,6 +71,8 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    border-radius: 4px;
+    border: 1px solid @borderColor;
   }
 
   &-operation {
@@ -106,6 +108,8 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    border-radius: 4px;
+    border: 1px solid @borderColor;
   }
 
   &-allCheckbox {
