--- a/src/Cascader/index.less
+++ b/src/Cascader/index.less
@@ -27,7 +27,7 @@
     }
 
     &-content {
-      padding: 0 8px;
+      padding: 0 23px 0 8px;
       overflow: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
