--- a/src/Input/index.less
+++ b/src/Input/index.less
@@ -62,6 +62,17 @@
     margin-left: 8px;
     color: @fullDarkColor;
   }
+  &-close {
+    margin-right: 8px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+  }
+  &-affterIcon {
+    line-height: 32px;
+    margin-right: 8px;
+    color: @fullDarkColor;
+  }
   &-content {
     flex: 1;
     input {
