--- a/src/Tabs/index.less
+++ b/src/Tabs/index.less
@@ -4,8 +4,13 @@
   border-radius: 6px;
   display: flex;
   flex-direction: column;
+
   &-horizontal {
     flex-direction: row;
+
+    &.@{prefix}-tabs-menu {
+    }
+
     .@{prefix}-tabs-head {
       flex: 0 0 114px;
       min-width: 114px;
@@ -15,6 +20,7 @@
       justify-content: flex-start;
       border: 0;
       border-right: 1px solid @dividerColor;
+
       &-content {
         width: 100%;
         display: flex;
@@ -27,12 +33,14 @@
       width: 100%;
       align-items: flex-end;
       flex-direction: column;
+
       &-item {
         width: 100%;
         margin: 0;
         text-align: right;
         justify-content: flex-end;
         padding-right: 20px;
+
         &-active {
           &::after {
             bottom: 0;
@@ -48,6 +56,7 @@
       }
     }
   }
+
   &-head {
     flex: 0 0 40px;
     height: 40px;
@@ -55,11 +64,13 @@
     align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid @dividerColor;
+
     &-content {
       display: flex;
       align-items: center;
     }
   }
+
   &-title {
     font-size: 14px;
     font-weight: 500;
@@ -67,6 +78,7 @@
     line-height: 14px;
     margin-left: 16px;
     margin-right: 16px;
+
     &::before {
       content: '';
       display: inline-block;
@@ -77,13 +89,16 @@
       vertical-align: middle;
       margin-right: 8px;
     }
+
     span {
       vertical-align: middle;
     }
   }
+
   &-nav {
     display: flex;
     align-items: center;
+
     &-item {
       cursor: pointer;
       height: 40px;
@@ -94,12 +109,15 @@
       display: flex;
       align-items: center;
       justify-content: center;
+
       &-disabled {
         cursor: not-allowed;
         color: @disableColor;
       }
+
       &-active {
         position: relative;
+
         &:after {
           content: '';
           position: absolute;
@@ -116,15 +134,19 @@
 
   &-extra {
   }
+
   &-body {
     flex: 1;
   }
+
   &-tab-item {
     display: none;
+
     &-active {
       display: block;
     }
   }
+
   &-footer {
   }
 }
