--- a/src/Cascader/index.less
+++ b/src/Cascader/index.less
@@ -73,70 +73,71 @@
       background: @fullDisableColor;
       border-color: 1px solid @borderColor;
     }
-
-    // popup
-    .@{prefix}-cascader-menus {
-      // min-width: 50%;
-      position: absolute;
-      z-index: 9999;
-      background: #ffffff;
-      box-shadow: 0px 6px 20px 0px rgba(153, 161, 194, 0.3);
-      border-radius: 2px;
-      // margin-top: 4px;
-      // padding: 2px;
-      max-height: 300px;
-      top: 38px;
-      display: flex;
-      .@{prefix}-cascader-menu {
-        overflow-y: auto;
-        border-right: 1px solid rgb(240, 240, 240);
-        .@{prefix}-cascader-menu-item {
-          width: 100%;
-          display: flex;
-          flex-wrap: nowrap;
-          align-items: center;
-          line-height: 22px;
-          white-space: nowrap;
-          text-overflow: ellipsis;
-          cursor: pointer;
-          padding: 5px 3px 5px 8px;
-          overflow: hidden;
-          transition: all 0.3s ease 0s;
-          position: relative;
-          &-content {
-            flex: 1 1 auto;
-            margin-right: 4px;
-          }
-          &:hover {
-            background: @tableItemHoverBackgroundColor;
-          }
-
-          &-active {
-            background: @tableItemSelectBackgroundColor;
-          }
-        }
-      }
-
-      &-popup {
-        z-index: 9999;
-      }
-
-      &-noData {
-        height: 34px;
-        background: #ffffff;
-        padding: 0;
-        line-height: 34px;
-        white-space: nowrap;
-        padding: 0 12px;
-        text-align: center;
-        font-size: 12px;
-      }
-    }
   }
 
   &-placeholder {
     .@{prefix}-cascader-target-content {
       color: @promptTextColor;
+    }
+  }
+}
+
+.rootnet-design-popup {
+  // popup
+  .@{prefix}-cascader-menus {
+    // min-width: 50%;
+    // position: absolute;
+    // z-index: 9999;
+    background: #ffffff;
+    box-shadow: 0px 6px 20px 0px rgba(153, 161, 194, 0.3);
+    border-radius: 2px;
+    max-height: 300px;
+    // top: 38px;
+    display: flex;
+    .@{prefix}-cascader-menu {
+      overflow-y: auto;
+      border-right: 1px solid rgb(240, 240, 240);
+      font-size: 14px;
+      .@{prefix}-cascader-menu-item {
+        width: 100%;
+        display: flex;
+        flex-wrap: nowrap;
+        align-items: center;
+        line-height: 22px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        cursor: pointer;
+        padding: 5px 3px 5px 8px;
+        overflow: hidden;
+        transition: all 0.3s ease 0s;
+        position: relative;
+        &-content {
+          flex: 1 1 auto;
+          margin-right: 4px;
+        }
+        &:hover {
+          background: @tableItemHoverBackgroundColor;
+        }
+
+        &-active {
+          background: @tableItemSelectBackgroundColor;
+        }
+      }
+    }
+
+    &-popup {
+      z-index: 9999;
+    }
+
+    &-noData {
+      height: 34px;
+      background: #ffffff;
+      padding: 0;
+      line-height: 34px;
+      white-space: nowrap;
+      padding: 0 12px;
+      text-align: center;
+      font-size: 12px;
     }
   }
 }
