联级选择组件支持在form中使用

--- a/src/Form/index.less
+++ b/src/Form/index.less
@@ -105,6 +105,12 @@
           transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
         }
       }
+
+      .@{prefix}-cascader-target:not(.@{prefix}-cascader-target-disabled) {
+        background-color: #fff;
+        border-color: #ff4d4f !important;
+        transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+      }
     }
 
     &-error {
