优化删除icon样式

--- a/src/Cascader/index.less
+++ b/src/Cascader/index.less
@@ -51,10 +51,14 @@
 
     &-close {
       position: absolute;
-      z-index: 0;
       right: 9px;
       top: 0px;
       z-index: 11;
+      opacity: 0.2;
+
+      &:hover {
+        opacity: 0.6;
+      }
     }
 
     &-visible {
