--- a/src/Input/index.less
+++ b/src/Input/index.less
@@ -67,6 +67,11 @@
     display: flex;
     align-items: center;
     cursor: pointer;
+    opacity: 0.2;
+
+    &:hover {
+      opacity: 0.6;
+    }
   }
   &-affterIcon {
     line-height: 32px;
