--- a/src/DatePicker/index.less
+++ b/src/DatePicker/index.less
@@ -2,3 +2,143 @@
 
 .@{prefix}-t {
 }
+
+.@{prefix}-calendar {
+  width: 244px;
+  height: 274px;
+  background: #ffffff;
+  box-shadow: 0px 4px 16px 0px rgba(188, 182, 204, 0.2);
+  border-radius: 4px;
+
+  &-time-content {
+    .@{prefix}-calendar-time-item {
+    }
+  }
+
+  &-year-content {
+    .@{prefix}-calendar-time-item {
+      width: 33.3333333%;
+    }
+  }
+
+  &-quarter-content {
+    .@{prefix}-calendar-time-item {
+      width: 33.3333333%;
+    }
+  }
+
+  &-head {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #f0f1f5;
+    height: 40px;
+    padding: 0 10px;
+  }
+
+  &-button {
+    width: 32px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+
+    &-prev {
+    }
+
+    &-next {
+    }
+  }
+
+  &-date {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    line-height: 40px;
+    cursor: pointer;
+
+    font-size: 12px;
+    font-weight: 400;
+    color: #15171f;
+
+    &-year {
+      margin-right: 10px;
+    }
+
+    &-month {
+    }
+  }
+
+  &-body {
+    padding: 0 10px;
+  }
+
+  &-day {
+    ul {
+      display: block;
+      width: 100%;
+    }
+
+    li {
+      text-align: center;
+      line-height: 32px;
+      display: inline-block;
+      width: 32px;
+      height: 32px;
+
+      font-size: 12px;
+      font-weight: 500;
+      color: #15171f;
+    }
+  }
+
+  &-time {
+    & > div {
+    }
+
+    &-item {
+      display: inline-block;
+      width: 32px;
+      height: 32px;
+      text-align: center;
+      line-height: 32px;
+      font-size: 12px;
+      cursor: no-drop;
+
+      &-next {
+        color: #d0d1d9;
+      }
+
+      &-prev {
+        color: #d0d1d9;
+      }
+
+      &-current {
+        color: #15171f;
+        cursor: pointer;
+      }
+
+      &-checked {
+        position: relative;
+
+        &:after {
+          content: '';
+          position: absolute;
+          left: 3px;
+          top: 3px;
+          right: 3px;
+          bottom: 3px;
+
+          border-radius: 2px;
+          border: 1px solid #5477ff;
+        }
+      }
+    }
+  }
+
+  &-footer {
+  }
+}
